[package]
name = "rocket-blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = "0.4.7"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
dotenv = "0.10.1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

